--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,7 +31,7 @@
  }
 
  .header__pict{
- 	background-color: pink;
+ 	// background-color: pink;
  	width: 100%;
  	height: 200px;
  	background-repeat: no-repeat;
@@ -48,23 +48,63 @@
  }
 
  .header__nav{
- 	background-color: skyblue;
+ 	background-color: lighten(grey, 20%);
  	width: 100%;
  	height: 50px;
  	display: flex;
  	justify-content: center;
  }
 
+ .header__nav__link{
+ 	font-size: 18px;
+ 	font-weight: bold;
+ 	text-decoration: none;
+ 	color: black;
+ }
+
  .box{
- 	background-color: green;
- 	width: 10%;
+ 	// width: 10%;
  	margin: 10px 10px;
+ 	padding: 0 1%;
+ 	border-radius: 5px;
+ 	box-shadow: 0 0.5px 2px black;
+ 	transition: all .3s;
+ 	&:hover{
+ 		transform: scale(1.1);
+ 		transition: all .3s;
+ 	}
  }
 
  .main__container{
 	// display: flex;
 	margin: 60px 5%;
  }
+
+ .articles{
+ 	display: flex;
+ 	flex-flow: row-reverse wrap-reverse;
+ 	justify-content: center;
+ 	width: 100%;
+}
+
+.articles__title{
+	text-align: center;
+	line-height: 100px;
+	font-size: 24px;
+	font-weight: bold;
+}
+
+.articles__box{
+	width: 35%;
+	margin: 1% 1%;
+	border-radius: 5px;
+	box-shadow: 0 1px 3px lighten(grey, 10%);
+	transition: all .3s;
+	&:hover{
+	    transform: scale(1.07);
+	    transition: all .3s;
+	}
+}
 
 
  .footer__text{
