--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -31,8 +31,10 @@
 			    <h4><span class="sidebar__marker">この記事について</span></h4>
 			</div>
 			<div class="sidebar__content">
-				<h5>目次</h5>
-				<div class="index">
+				<div class="sidebar__content__items">
+					<h5>目次</h5>
+					<div class="index">
+					</div>
 				</div>
 				<div class="sidebar__content__items">
 					<div class="sidebar__content__item">
