--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,12 +4,14 @@ html(lang="en")
     title Myblog
     = csrf_meta_tags
     = csp_meta_tag
+    meta name="viewport" content="width=device-width, initial-scale=1.0"
     = stylesheet_link_tag('application', 'data-turbolinks-track': 'reload')
   body
     main.main
       header.header
         div.header__pict
           p.header__pict__text CAN WEAR ANYTHING
+          p.header__pict__text__sub Blog88to
       nav.header__nav
         - if user_signed_in?
           div.box
