--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -31,7 +31,7 @@
 			    <h4><span class="sidebar__marker">この記事について</span></h4>
 			</div>
 			<div class="sidebar__content">
-				<div class="sidebar__content__items">
+				<div class="sidebar__content__items__1">
 					<h5>目次</h5>
 					<div class="index">
 					</div>
