--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,7 +10,7 @@ html(lang="en")
     main.main
       header.header
         div.header__pict
-          p.header__pict__text CAN WEAR ANYTHING
+          p.header__pict__text Blog88to
           p.header__pict__text__sub Blog88to
       nav.header__nav
         - if user_signed_in?
