--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,6 +5,7 @@ html(lang="en")
     = csrf_meta_tags
     = csp_meta_tag
     meta name="viewport" content="width=device-width, initial-scale=1.0"
+    meta name="google-site-verification" content="Co_NKD61n0wLkAFaZgDLuoCMe8THVhlY8iUG0CvSnrQ"
     = stylesheet_link_tag('application', 'data-turbolinks-track': 'reload')
   body
     main.main
