--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -361,6 +361,8 @@
 	.mainbar{
 		width: 99%;
 		margin: 10px auto;
+		font-size: 16px;
+		line-height: 1.5;
 	}
     .articles__box{
     	width: 90%;
