--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [article, comment] ) do |form| %>
+<%= form_with(model: [article, comment], local: true ) do |form| %>
   <div>
   	<%= label :name, 'お名前' %>
     <%= form.text_field :name %>
