--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -89,14 +89,29 @@
     }
  }
 
- .header__nav{
-    background-color: lighten(grey, 25%);
+ .search{
+ 	background-color: lighten(grey, 30%);
  	width: 100%;
  	height: 50px;
  	display: flex;
  	justify-content: center;
- 	// border-top: 1px solid grey;
- 	// border-bottom: 1px solid grey;
+ 	position: relative;
+ }
+
+ .search__field{
+ 	display: inline-block;
+ 	position: absolute;
+ 	top: 50%;
+ 	right: 1%;
+ 	transform: translateY( -50%);
+ }
+
+ .header__nav{
+    background-color: lighten(grey, 10%);
+ 	width: 100%;
+ 	height: 50px;
+ 	display: flex;
+ 	justify-content: center;
  }
 
  .header__nav__link{
