--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -90,7 +90,7 @@
  }
 
  .search{
- 	background-color: lighten(grey, 30%);
+ 	background-color: lighten(grey, 40%);
  	width: 100%;
  	height: 50px;
  	display: flex;
@@ -102,12 +102,24 @@
  	display: inline-block;
  	position: absolute;
  	top: 50%;
- 	right: 1%;
- 	transform: translateY( -50%);
+ 	right: 2%;
+ 	transform: translateY(-50%);
+ 	& input{
+ 		box-shadow: 0 1px 3px black;
+ 		border-radius: 5px;
+ 		&:first-child{
+ 			height: 30px;
+            width: 200px;
+	 		margin-right: 5px;
+ 		}
+ 		&:last-child:hover{
+ 			opacity: 0.7;
+ 		}
+ 	}
  }
 
  .header__nav{
-    background-color: lighten(grey, 10%);
+    background-color: lighten(grey, 25%);
  	width: 100%;
  	height: 50px;
  	display: flex;
