--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,8 @@
  */
  // Custom bootstrap variables must be set or imported *before* bootstrap.
  @import "bootstrap";
+ @import 'font-awesome-sprockets';
+ @import 'font-awesome';
 
  *{
  	text-decoration: none;
@@ -105,14 +107,17 @@
  	right: 2%;
  	transform: translateY(-50%);
  	& input{
+		height: 30px;
+        width: 200px;
+ 		margin-right: 5px;
  		box-shadow: 0 1px 3px black;
  		border-radius: 5px;
- 		&:first-child{
- 			height: 30px;
-            width: 200px;
-	 		margin-right: 5px;
- 		}
- 		&:last-child:hover{
+ 	}
+ 	& button{
+ 		box-shadow: 0 1px 3px black;
+ 		border-radius: 5px;
+ 		font-size: 18px;
+ 		&:hover{
  			opacity: 0.7;
  		}
  	}
