--- a/app/views/articles/archive.html.erb
+++ b/app/views/articles/archive.html.erb
@@ -1,11 +1,9 @@
 <div class="main__container__wrapper">
-	<h3 class="articles__title"><span class="title__marker">ALL ARTICLES</span></h3>
 	<div class="articles">
-		<% @articles.each do |article| %>
+		<% @articles.where(created_at: "2019-09%").each do |article| %>
 		    <div class="articles__box">
 				<%= link_to article_path(article), class: "subTitle" do %>
 					<p class="mainbar__title"><span class="mainbar__title__marker"><%= article.title %></span></p>
-					<p class="mainbar__description"><%= article.description %></p>
 					<p class="mainbar__meta"><%= article.category.name %></p>
 					<p class="mainbar__meta">コメント<%= article.comments.count %>件</p>
 					<p class="mainbar__meta"><%= article.created_at.strftime("%Y-%m-%d") %></p>
@@ -13,6 +11,6 @@
 		    </div>
 		<% end %>
 	</div>
-	<%= paginate @articles, class: "pagination paginate" %>
 </div>
 
+<!-- 月別アーカイブ書こうとしてる、rubyの構文わからなくて詰んでる -->
