--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,13 +26,28 @@
  	color: #545B63;
  }
 
+ a{
+ 	text-decoration: none;
+ 	color: #545B63;
+ 	&:hover{
+ 		text-decoration: none;
+ 	}
+ }
+
  .main{
- 	background-color: darken(#F8F8F8,2%);
+ 	background-color: #F8F8F8;
  }
 
  .flash{
  	margin-left: 10%;
  }
+
+ // .link_to{
+ // 	text-decoration: none;
+ // 	&:hover{
+ // 		text-decoration: none;
+ // 	}
+ // }
 
  trix-toolbar {
     position: sticky;
@@ -46,28 +61,47 @@
  		background-color: rgba(30, 30, 30, 0.8);
  		border-radius: 5px;
  		line-height: 1.5em;
- 		padding: 1.5% 2%;
+ 		padding: 2%;
  		margin: 1% 0;
  		color: white;
  	}
     & blockquote{
- 		border-left: 0.3em solid tomato;
- 		border-right: 0.3em solid tomato;
-    	background-color: #ccc;
+ 		border: 0.5px solid darken(#F8F8F8,10%);
+    	background-color: #F8F8F8;
+    	padding: 2%;
+    	margin: 1% 0;
     }
 	& h1{
-	 	line-height: 2em;
+	 	line-height: 40px;
 	 	// border-radius: 10px;
+	 	background-color: #F8F8F8;
 	 	border-left: 10px solid skyblue;
-	 	border-bottom: 1px dotted grey;
-	 	padding: 0 4%;
-	 	margin: 5% 0;
+	 	padding: 20px 4%;
+	 	margin: 3% 0;
+	 	font-size: 25px;
+	}
+	& ul{
+		border: 1px dotted skyblue;
+		background-color: lighten(skyblue,20%);
+		padding: 4%;
+		margin: 1% 0;
+		line-height: 2;
+	}
+	& ol{
+		border: 1px dotted lighten(grey,20%);
+		background-color: lighten(grey,40%);
+		padding: 4%;
+		margin: 1% 0;
+		line-height: 2;
+	}
+	& .attachment__caption{
+		display: none;
 	}
  }
 
  .index{
     // transform: scale(0.8);
-    font-size: 14px;
+    font-size: 17px;
     font-weight: bold;
     background-color: darken(#F8F8F8,10%);
     padding: 10px 20px 20px 20px;
@@ -78,30 +112,37 @@
     	margin-bottom: 0;
     	border-bottom: 1px solid grey;
     	word-wrap: break-word;
-	    line-height: 30px;
+	    line-height: 40px;
     	& > li{
 		    text-align: left;
+		    &:hover{
+		    	& a{
+			    	color: white;
+		    	}
+		    	transition: all .5s;
+		    }
     	}
     }
  }
 
  .header{
-    height: 200px;
+    height: 100px;
     width: 100%;
  }
 
  .header__pict{
- 	background-color: grey;
- 	width: 100%;
- 	height: 200px;
- 	background-repeat: no-repeat;
+ 	background-image: url("star.png");
+ 	// background-color: grey;
+ 	background-position: top;
  	background-size: cover;
- 	background-position: center;
+ 	width: 100%;
+ 	height: 100px;
  }
 
  .header__pict__text{
+ 	width: 40%;
  	text-align: center;
- 	line-height: 200px;
+ 	line-height: 100px;
  	font-weight: bold;
  	font-size: 42px;
  	font-family: 'Optima', sans-serif;
@@ -116,31 +157,28 @@
  }
 
  .search{
- 	background-color: lighten(grey, 40%);
- 	width: 100%;
+ 	width: 270px;
  	height: 50px;
- 	display: flex;
  	justify-content: center;
  	position: relative;
  }
 
  .search__field{
- 	display: inline-block;
- 	position: absolute;
- 	top: 50%;
- 	right: 2%;
- 	transform: translateY(-50%);
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
  	& input{
-		height: 30px;
+		// height: 35px;
         width: 200px;
- 		margin-right: 7px;
  		box-shadow: 0 1px 3px black;
  		border-radius: 5px;
+ 		margin-right: 10px;
  	}
  	& button{
  		box-shadow: 0 1px 3px black;
  		border-radius: 5px;
- 		font-size: 18px;
+ 		// font-size: 24px;
  		&:hover{
  			transform: scale(1.1);
  			transition: all .3s;
@@ -153,40 +191,68 @@
  }
 
  .header__nav{
-    background-color: lighten(grey, 25%);
- 	width: 100%;
+ 	width: 45%;
  	height: 50px;
  	display: flex;
- 	justify-content: center;
+ 	justify-content: left;
  }
 
- .header__nav__link{
- 	font-size: 18px;
- 	font-weight: bold;
- 	text-decoration: none;
- 	color: #545B63;
- 	&:hover{
- 		text-decoration: none;
- 		color: tomato;
- 	}
+ .header__nav__wrapper{
+    background-color: lighten(grey, 25%);
+ 	width: 100%;
+ 	margin: 0 auto;
+ 	display: flex;
+ 	justify-content: space-around;
  }
 
  .box{
- 	// width: 10%;
- 	margin: 10px 10px;
- 	padding: 0 1%;
- 	border-radius: 5px;
- 	box-shadow: 0 0.5px 2px black;
- 	transition: all .3s;
+ 	background-color: lighten(grey, 25%);
+ 	height: 50px;
+ 	width: 25%;
+ 	font-weight: bold;
  	&:hover{
- 		transform: scale(1.1);
- 		transition: all .3s;
+	    background-color: black;
+	    color: white;
+	    & .header__nav__link{
+	    	color: tomato;
+	    }
  	}
+ }
+
+ .dropdown__container{
+ 	position: relative;
+ }
+
+ .dropdown__box{
+ 	background-color: rgba(30, 30, 30, 0.9);
+ 	position: absolute;
+ 	top: 50px;
+ 	left: 0;
+ 	width: 100%;
+ 	z-index: 1;
+ 	padding: 10px 0;
+ 	font-weight: bold;
+ }
+
+ .dropdown__item{
+ 	line-height: 40px;
+ 	color: #FFF;
+ 	&:hover{
+ 		background-color: black;
+ 		transition: all .5s;
+ 	}
+ }
+
+ .drop1__box,
+ .drop2__box,
+ .drop3__box{
+ 	display: none;
  }
 
  .main__container{
 	// display: flex;
-	margin: 60px 2%;
+	margin: 60px auto;
+    width: 1170px;
  }
 
  .main__container__wrapper{
@@ -222,7 +288,7 @@
 }
 
 .articles__box{
-	width: 35%;
+	width: 45%;
 	margin: 1% 1%;
 	border-radius: 5px;
 	box-shadow: 0 1px 3px lighten(grey, 10%);
@@ -236,9 +302,8 @@
 
 .mainbar{
 	background-color: white;
-	margin-left: 5%;
-	width: 70%;
-	border-radius: 20px;
+	width: 67%;
+	border-radius: 10px;
 	padding: 20px 4%;
 	position: relative;
 	font-size: 20px;
@@ -257,6 +322,14 @@
 	font-weight: bold;
 	font-family: 'Optima', sans-serif;
 	word-wrap: break-word;
+}
+
+.mainbar__description{
+	width: 100%;
+	font-size: 12px;
+	word-wrap: break-word;
+	text-align: center;
+	margin: 10px 0;
 }
 
 .mainbar__title__marker{
@@ -285,17 +358,27 @@
 }
 
 .sidebar{
- 	width: 24%;
+ 	width: 31%;
  	// height: 700px;
- 	margin-left: 1%;
+ 	margin-left: 2%;
+ 	& h5{
+ 		font-weight: bold;
+ 	}
 }
 
 .sidebar__wrapper{
+ 	border-radius: 10px;
+ 	background-color: white;
+ 	padding: 20px 0;
+ 	margin-bottom: 20px;
+}
+
+.sidebar__sticky{
+	border-radius: 10px;
+	padding: 20px 0;
  	position: sticky;
  	top: 30px;
- 	border-radius: 20px;
  	background-color: white;
- 	padding: 30px 0;
 }
 
 .sidebar__content{
@@ -304,16 +387,54 @@
 	text-align: center;
 }
 
+.sidebar__content__categories{
+	font-size: 17px;
+    font-weight: bold;
+    background-color: darken(#F8F8F8,10%);
+    padding: 10px 20px 20px 20px;
+    border-radius: 5px;
+    margin: 10px 0;
+}
+
+.sidebar__content__categories__links{
+    margin-bottom: 0;
+	border-bottom: 1px solid grey;
+	word-wrap: break-word;
+    line-height: 40px;
+    &:hover{
+    	background-color: blue;
+    	color: white;
+    	padding-left: 20px;
+    	transition: all .5s;
+    }
+}
+
 .sidebar__content__link{
 	width: 100%;
 	border-radius: 20px;
 	border: 2px solid darken(#F8F8F8,10%);
 	font-weight: bold;
+	transition: all .4s;
 	& > p{
 		background-color: darken(#F8F8F8,10%);
 		margin-bottom: 0;
 		border-radius: 0 0 17px 17px;
 	}
+	&:hover{
+		transform: scale(1.1);
+		transition: all .4s;
+	}
+}
+
+.intro{
+	margin: 40px auto;
+	width: 80%;
+}
+
+.intro__text{
+	font-size: 14px;
+	line-height: 1.1;
+	text-align: left;
 }
 
 .sidebar__content__items{
@@ -395,66 +516,88 @@
  	color: tomato;
 }
 
-@media screen and (max-width: 760px){
-
-    .header{
-    	height: 400px;
-    }
-
-    .header__pict{
-    	height: 400px;
-    	background-image: url("star.png");
-    	background-size: cover;
-    	background-position: center;
-    	background-repeat: no-repeat;
-    }
-
-    .header__pict__text{
-    	display: block;
-    	font-size: 36px;
-    	text-align: center;
-    	line-height: 400px;
-    	color: #FFF;
-    	& span{
-    		color: darken(tomato,10%);
-    	}
-    }
-
-	.main__container__flex{
-		display: block;
+@media screen and (max-width: 1100px){
+	.main__container{
+		width: 95%;
 	}
-
 	.mainbar{
-		width: 99%;
-		margin: 10px auto;
-		font-size: 16px;
-		line-height: 1.5;
+		width: 70%;
+		margin-left: 0;
 	}
-    .articles__box{
-    	width: 90%;
-    	margin-bottom: 20px;
-    }
-
-	trix-toolbar{
-		display: none;
-	}
-
-	.comment{
-		transform: scale(1.05);
-	}
-
 	.sidebar{
-		width: 99%;
-		margin: 10px auto;
+		width: 29%;
 	}
+    .comment form{
+    	transform: scale(0.8);
+    }
+	@media screen and (max-width: 800px){
+        
+        .search{
+        	display: none;
+        }
 
- 	.sidebar__content__items__1{
-		display: none;
- 	}
+        .header__nav{
+        	width: 100%;
+        }
 
- 	.sidebar__content:nth-child(1){
-	    display: none;
- 	}
+	    .header{
+	    	height: 400px;
+	    }
+
+	    .header__pict{
+	    	height: 400px;
+	    	background-image: url("star.png");
+	    	background-size: cover;
+	    	background-position: center;
+	    	background-repeat: no-repeat;
+	    }
+
+	    .header__pict__text{
+	    	width: 100%;
+	    	display: block;
+	    	font-size: 36px;
+	    	text-align: center;
+	    	line-height: 400px;
+	    	color: #FFF;
+	    	& span{
+	    		color: darken(tomato,10%);
+	    	}
+	    }
+
+		.main__container__flex{
+			display: block;
+		}
+
+		.mainbar{
+			width: 99%;
+			margin: 10px auto;
+			font-size: 16px;
+			line-height: 1.5;
+		}
+	    .articles__box{
+	    	width: 90%;
+	    	margin-bottom: 20px;
+	    }
+
+		trix-toolbar{
+			display: none;
+		}
+
+		.comment{
+			transform: scale(1.05);
+		}
+
+		.sidebar{
+			width: 99%;
+			margin: 10px auto;
+		}
+
+	 	.sidebar__sticky{
+			display: none;
+	 	}
+	}
 }
+
+
 
 
