--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,6 +9,7 @@ html(lang="en")
     = display_meta_tags(default_meta_tags)
     link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous"
     = stylesheet_link_tag('application', 'data-turbolinks-track': 'reload')
+    = favicon_link_tag('favicon.ico')
   body
     main.main
       header.header
