--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,6 +10,7 @@ html(lang="en")
     link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous"
     = stylesheet_link_tag('application', 'data-turbolinks-track': 'reload')
     = favicon_link_tag('favicon.ico')
+    script{ data-ad-client="ca-pub-4712100556499049" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" }
   body
     main.main
       header.header
