--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,6 +11,13 @@ html(lang="en")
     = stylesheet_link_tag('application', 'data-turbolinks-track': 'reload')
     = favicon_link_tag('favicon.ico')
     script{ data-ad-client="ca-pub-4712100556499049" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" }
+    script{ async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" }
+    script{
+      (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "pub-4712100556499049",
+      enable_page_level_ads: true
+      });
+    }
   body
     main.main
       header.header
