--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,12 +12,6 @@ html(lang="en")
     = favicon_link_tag('favicon.ico')
     script{ data-ad-client="ca-pub-4712100556499049" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" }
     script{ async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" }
-    script{
-      (adsbygoogle = window.adsbygoogle || []).push({
-      google_ad_client: "pub-4712100556499049",
-      enable_page_level_ads: true
-      });
-    }
   body
     main.main
       header.header
@@ -72,4 +66,4 @@ html(lang="en")
       footer.footer
         p.footer__text &copy; blog.inc
     = javascript_pack_tag('application', 'data-turbolinks-track': 'reload')
-
+      (adsbygoogle = window.adsbygoogle || []).push({google_ad_client: "pub-4712100556499049"enable_page_level_ads: true});
