--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -66,4 +66,4 @@ html(lang="en")
       footer.footer
         p.footer__text &copy; blog.inc
     = javascript_pack_tag('application', 'data-turbolinks-track': 'reload')
-      (adsbygoogle = window.adsbygoogle || []).push({google_ad_client: "pub-4712100556499049"enable_page_level_ads: true});
+    = javascript_pack_tag(adsbygoogle = window.adsbygoogle || []).push({google_ad_client: "pub-4712100556499049"enable_page_level_ads: true})
